# asset-tool

./: .gitignore  .mypy.ini  README.md  pyproject.toml  web.config
api/: admin.py  logic.py  models.py  urls.py  utils.py  views.py
api/migrations/: 0001_initial.py  0002_mailed_alter_props_options_alter_props_attr_and_more.py  0003_alter_printer_name.py  0004_remove_props_scheme_remove_props_type_id.py  0005_rename_scheme_insightentity_schema.py  0006_labeltemplates.py  0007_remove_insightentity_props_props_referenced.py  0008_propstypes_props_type.py  0009_props_value_referenced.py
core/: settings.py  urls.py  views.py
equipment_editing_group/: apps.py  urls.py  views.py
equipment_editing_single/: apps.py  urls.py  views.py
facility_invent/: apps.py  urls.py  views.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  permissions.ts  router.tsx
it_invent/: apps.py  mail_data.py  urls.py  views.py
it_inventory_management/: apps.py  urls.py  views.py
it_utilization/: apps.py  tests.py  urls.py  views.py
logic/: IDAM.py  MARS.py  insight.py  jira.py  send_mail.py
mobile_invent/: b_logic.py  models.py  urls.py  views.py
mobile_invent/logic/: mapping.py  word_blanks.py
mobile_invent/migrations/: 0001_initial.py
mobile_invent/tests/: test_logic.py
static/: index-script.js  index.html  web.config
templates/: 401.html  base.html  equipment_editing_main.html  header.html  index.html  mobile.html  printers.html
templatetags/: templatetags.py
users/: IDAM.py  models.py  permissions.py  views.py
utils/: urls.py
(+67 files in other folders)
